feat: Confirm booking and cancel overlapping bookings on successful transaction, refine business exception messages, and create a new log file.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 # Application Name
 spring.application.name=payments-svc
 spring.profiles.active=local
+server.port=8085
 
 # ==================== PostgreSQL Datasource ====================
 spring.datasource.url=jdbc:postgresql://localhost:5432/lotfi?sslmode=disable
