feat: add Actuator and Prometheus dependencies and configure monitoring endpoints

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,3 +64,7 @@ app.property-service.url=http://localhost:8082
 
 # ==================== Booking Service Configuration ====================
 app.booking-service.url=http://localhost:8083
+
+management.endpoints.web.exposure.include=health,info,prometheus
+management.endpoint.health.show-details=always
+management.metrics.tags.application=${spring.application.name}
